--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonsuz Aşkıma ❤️</title>
+    <title>ŞEVVALE ❤️</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,13 +11,13 @@
 
     <header>
         <h1>Doğum Günün Kutlu Olsun, Sevgilim! ❤️</h1>
-        <h2>Sana Olan Aşkımla...</h2>
+        <h2>Bu sayfa sadece sana  bugünü unutulmaz kılmak için...</h2>
     </header>
 
     <div class="container">
 
         <section class="poetry-section">
-            <h3>❤️ Benim Kalemimden Sana ❤️</h3>
+            <h3>Şevvale❤️</h3>
             <div class="poem">
                 <p>
                     Gitme, istemem senden başka bir lavanta
@@ -62,7 +62,7 @@ belki de bir lavanta kokusunda bulursun beni.
 
 
         <section class="message-section">
-            <h3>📝 Sana Özel Mesajım 📝</h3>
+            <h3>Doğum Günü Mesajı</h3>
             <p class="message-text">
                 Bugün senin günün ve her şey seninle daha güzel…  
 Her sabah gözlerini düşünerek uyanmak,  
@@ -77,32 +77,37 @@ Ve varlığın, her şeyi daha anlamlı kılıyor.
 İyi ki doğdun sevgilim,  
 İyi ki hayatıma girdin,  
 İyi ki varsın…  
-Sonsuz sevgimle,
+Sevgilin,
   
-[ERKAN]
+ERKAN
             </p>
         </section>
-
-        <section class="gallery-section">
-            <h3>Aşkım Bak Biz</h3>
+<section class="gallery-section">
+            <h3>Aşkım Bak Bu Da Biz</h3>
             <div class="gallery">
-                <img src="WhatsApp Görsel 2025-11-12 saat 12.41.41_13ce5a0c.jpg" alt="Birlikte bir anımız" class="gallery-img">
-                <img src="foto2.jpg" alt="Başka bir güzel anımız" class="gallery-img">
+                <img src="foto1.jpg" class="gallery-img">
+                <img src="foto2.jpg" alt="bu da biz" class="gallery-img">
                 <img src="foto3.jpg" alt="En sevdiğim fotoğraf" class="gallery-img">
             </div>
         <section class="video-section">
-    <h3>Bunlar Çok İyi ALASKDAKJSDAK</h3>
+    <h3>Bu Çok iyi ALASKDAKJSDAK</h3>
     <div class="video-gallery">
         <video controls>
             <source src="video/video1.mp4" type="video/mp4">
             Tarayıcınız video etiketini desteklemiyor.
         </video>
-        <video controls>
-            <source src="video/video2.mp4" type="video/mp4">
-            Tarayıcınız video etiketini desteklemiyor.
-        </video>
     </div>
 </section>
+
+
+    </div>
+
+    <footer>
+        <p>❤ 2025 Senin Adın. Sonsuza Dek Benimsin. ❤</p>
+    </footer>
+
+</body>
+</html>
 
 
     </div>
