--- a/index.html
+++ b/index.html
@@ -5,142 +5,160 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ŞEVVALE ❤️</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="game.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header>
-        <h1>Doğum Günün Kutlu Olsun, Sevgilim! ❤️</h1>
-        <h2>Bu sayfa sadece sana  bugünü unutulmaz kılmak için...</h2>
-    </header>
+<header>
+    <h1>Doğum Günün Kutlu Olsun, Sevgilim! ❤️</h1>
+    <h2>Bu sayfa sadece sana bugünü unutulmaz kılmak için...</h2>
+</header>
 
-    <div class="container">
-
-        <section class="poetry-section">
-            <h3>Şevvalime❤️</h3>
-            <div class="poem">
-                <p>
-                    Gitme, istemem senden başka bir lavanta
-senden başka bir sabahın kokusunu
-Ne de senden başka bir sığınak.
-
-<br>
-                   Gitme, istemem, kal bu devirde benimle,
-Benden başkası sana zehir de
-Bir doğumunla başlar ömrün nehirde,
-Bir benle biter sessiz bir şiirde
-
-<br>
-                    Geleceğimiz dediğin serap misali
-Yaşlılık gelir, siler hayali
-Lavanta koksun sarsın ahvali
-Bir sen tam edersin bu kalbimin halini
-<br>
-                    Bütün umutlarım sende saklıdır
-Her bakışın bir ömür aklıdır.
-Zamanımız geçse de gönlüm hep haklıdır,
-Sensiz bir hayat eksik ve noksandır.
-
-                </p>
-                <p>
-                    Gitme istemem, dönsem şu 1000 yıla,
-Senden başkası düşmez rüyama.
-Senin Doğumun bana nur, kendi ölümümse, duamda.
-Lavantan kokar bütün hayatım da.
-
-<br>
-                    Doğumunla yanında olamadım yar,
-ama ölümümde aklım sen olansın
-Belki bir rüzgar gibi geçerim yanından,
-belki de bir lavanta kokusunda bulursun beni.
-7 saniyemsin sen benim.  Birlikte mutlu senelere sevgilim
-                </p>
-            </div>
-        </section>
-<!-- Animasyonlu Kalp -->
-<div class="heart"></div>
-
-
-        <section class="message-section">
-            <h3>Doğum Günü Mesajı</h3>
-            <p class="message-text">
-                Bugün senin günün ve her şey seninle daha güzel…  
-Her sabah gözlerini düşünerek uyanmak,  
-Her anını hayal ederek gülümsemek,  
-Hayatın en güzel tesadüfü olduğun gerçeğini bana hatırlatıyor.  
-
-Seninle geçen her saniye, bir ömür kadar değerli.  
-Gülüşün karanlığımı aydınlatıyor,  
-Sesin ruhuma dokunuyor,  
-Ve varlığın, her şeyi daha anlamlı kılıyor.  
-
-İyi ki doğdun sevgilim,  
-İyi ki hayatıma girdin,  
-İyi ki varsın…  
-Sevgilin,
-  
-ERKAN
-            </p>
-<section class="gallery-section">
-    <h3>Aşkım Aşağıdaki Butona Tıkla ↓</h3>
-
-    <!-- Fotoğrafları Göster Butonu -->
-    <button id="toggleGallery" class="gallery-btn">Fotoğrafları Göster 💜</button>
-
-    <!-- 🦝 Rakun Fotoğrafı (her zaman görünür) -->
-    <div class="raccoon-container">
-        <img src="raccoon.jpg" alt="BU DA SEN" class="raccoon-img">
-    </div>
-
-    <!-- 🎵 Müzik Bölümü -->
+<div class="container">
+    
     <section class="music-section">
-        <h3>Bu Şarkı Senin İçin 🎶</h3>
+        <h3>SİTEYİ ZİYARET ETMEDEN ÖNCE MÜZİĞİ AÇINIZ 🎶</h3>
+        <p style="text-align: center; color: #ff4081; font-weight: bold; margin-bottom: 15px;">Bu Şarkı Senin İçin! Şiiri bu melodiyle okumalısın.</p>
         <audio controls class="music-player">
             <source src="sarki.mp3" type="audio/mpeg">
             Tarayıcınız bu müzik formatını desteklemiyor.
         </audio>
     </section>
 
-    <!-- 📸 Fotoğraflar -->
-    <div class="gallery" id="photoGallery">
-        <img src="foto1.jpg" class="gallery-img">
-        <img src="foto2.jpg" class="gallery-img">
-        <img src="foto3.jpg" class="gallery-img">
-    </div>
+    <section class="poetry-section">
+        <h3>Şevvalime❤️</h3>
+        <div class="poem">
+            <p>
+                Gitme, istemem senden başka bir lavanta<br>
+                senden başka bir sabahın kokusunu<br>
+                Ne de senden başka bir sığınak.
+            </p>
+            <p>
+                Gitme istemem, kal bu devirde benimle,<br>
+                Benden başkası sana zehir de<br>
+                Bir doğumunla başlar ömrün nehirde,<br>
+                Bir benle biter sessiz bir şiirde
+            </p>
+            <p>
+                Geleceğimiz dediğin serap misali<br>
+                Yaşlılık gelir, siler hayali<br>
+                Lavanta koksun sarsın ahvali<br>
+                Bir sen tam edersin bu kalbimin halini
+            </p>
+            <p>
+                Bütün umutlarım sende saklıdır<br>
+                Her bakışın bir ömür aklıdır.<br>
+                Zamanımız geçse de gönlüm hep haklıdır,<br>
+                Sensiz bir hayat eksik ve noksandır.
+            </p>
+            <p>
+                Gitme istemem, dönsem şu 1000 yıla,<br>
+                Senden başkası düşmez rüyama.<br>
+                Senin Doğumun bana nur, kendi ölümümse, duamda.<br>
+                Lavantan kokar bütün hayatım da.
+            </p>
+            <p>
+                Doğumunla yanında olamadım yar,<br>
+                ama ölümümde aklım sen olansın<br>
+                Belki bir rüzgar gibi geçerim yanından,<br>
+                belki de bir lavanta kokusunda bulursun beni.<br>
+                7 saniyemsin sen benim. Birlikte mutlu senelere sevgilim
+            </p>
+        </div>
+    </section>
 
-<!-- 📹 Video Bölümü (fotoğraflardan hemen sonra) -->
-<section class="video-section">
-    <h3>Komik Videomuz 🎬</h3>
-    <video controls class="video-player">
-        <source src="video.mp4" type="video/mp4">
-        Tarayıcınız video etiketini desteklemiyor.
-    </video>
-</section>
+    <div class="heart"></div>
 
-<!-- JavaScript (en altta, </body>’den hemen önce) -->
+    <section class="message-section">
+        <h3>Doğum Günü Mesajı</h3>
+        <p class="message-text">
+            Bugün senin günün ve her şey seninle daha güzel…<br>
+            Her sabah gözlerini düşünerek uyanmak,<br>
+            Her anını hayal ederek gülümsemek,<br>
+            Hayatın en güzel tesadüfü olduğun gerçeğini bana hatırlatıyor.<br><br>
+
+            Seninle geçen her saniye, bir ömür kadar değerli.<br>
+            Gülüşün karanlığımı aydınlatıyor,<br>
+            Sesin ruhuma dokunuyor,<br>
+            Ve varlığın, her şeyi daha anlamlı kılıyor.<br><br>
+
+            İyi ki doğdun sevgilim,<br>
+            İyi ki hayatıma girdin,<br>
+            İyi ki varsın…<br>
+            Sevgilin,<br>
+            ERKAN
+        </p>
+    </section>
+
+    <section class="gallery-section">
+        <h3>Aşkım Aşağıdaki Butona Tıkla ↓</h3>
+        <button id="toggleGallery" class="gallery-btn">Fotoğrafları Göster 💜</button>
+
+        <div class="raccoon-container">
+            <img src="raccoon.jpg" alt="BU DA SEN" class="raccoon-img">
+        </div>
+
+        <div class="gallery" id="photoGallery">
+            <img src="foto1.jpg" class="gallery-img">
+            <img src="foto2.jpg" class="gallery-img">
+            <img src="foto3.jpg" class="gallery-img">
+        </div>
+
+        <section class="video-section">
+            <h3>Öylesine koydumm</h3>
+            <video controls class="video-player">
+                <source src="video.mp4" type="video/mp4">
+                Tarayıcınız video etiketini desteklemiyor.
+            </video>
+        </section>
+    </section>
+
+    <section class="raccoon-game-section">
+        <h3>Rakun Koşu Oyunun 🦝</h3>
+        <div class="score-board">
+            <span id="scoreDisplay">Skor: 0</span>
+            <span id="highScoreDisplay">Rekor: 0</span>
+        </div>
+        
+        <canvas id="gameCanvas" width="600" height="200"></canvas>
+        <div class="game-info">Zıplamak için Oyun Alanına Tıklayın veya Boşluk Tuşuna Basın!</div>
+    </section>
+
+</div>
+
+<footer>
+    <p>❤️ 2025 Senin Adın. Sonsuza Dek Benimsin. ❤️</p>
+</footer>
+
 <script>
-    const toggleBtn = document.getElementById('toggleGallery');
-    const gallery = document.getElementById('photoGallery');
-    let isVisible = false;
+// FOTOĞRAF GALERİSİ KODUNUZ
+const toggleBtn = document.getElementById('toggleGallery');
+const gallery = document.getElementById('photoGallery');
+let isVisible = false;
+gallery.style.display = "none";
 
-    gallery.style.display = "none"; // Başta gizli
-
-    toggleBtn.addEventListener('click', () => {
-        isVisible = !isVisible;
-        if (isVisible) {
-            gallery.style.display = "flex";
-            gallery.style.opacity = "0";
-            setTimeout(() => {
-                gallery.style.transition = "opacity 0.8s ease";
-                gallery.style.opacity = "1";
-            }, 10);
-            toggleBtn.textContent = "SENİ SEVİYORUM 💜";
-        } else {
-            gallery.style.opacity = "0";
-            setTimeout(() => {
-                gallery.style.display = "none";
-            }, 500);
-            toggleBtn.textContent = "Bunu Neden Koyduğumu Sorgulama";
-        }
-    });
+toggleBtn.addEventListener('click', () => {
+    isVisible = !isVisible;
+    if(isVisible){
+        gallery.style.display = "flex";
+        gallery.style.opacity = "0";
+        setTimeout(() => {
+            gallery.style.transition = "opacity 0.8s ease";
+            gallery.style.opacity = "1";
+        }, 10);
+        toggleBtn.textContent = "SENİ SEVİYORUM 💜";
+    } else {
+        gallery.style.opacity = "0";
+        setTimeout(() => {
+            gallery.style.display = "none";
+        }, 500);
+        toggleBtn.textContent = "Aşkım Aşağıdaki Butona Tıkla ↓";
+    }
+});
 </script>
+
+<script src="game.js"></script>
+
+</body>
+</html>
